--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@composita/runtime",
-  "version": "0.1.0-dev.13",
+  "version": "0.2.0",
   "description": "Composita language runtime.",
   "main": "dist/cjs/runtime.js",
   "module": "dist/esm/runtime.js",
@@ -42,7 +42,7 @@
   },
   "homepage": "https://www.composita.dev/",
   "devDependencies": {
-    "@composita/compiler": "^0.1.0-dev.17",
+    "@composita/compiler": "^0.2.0",
     "@types/node": "^14.0.25",
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
@@ -58,14 +58,14 @@
     "vscode-languageserver-types": "^3.15.1"
   },
   "dependencies": {
-    "@composita/il": "^0.1.0-dev.15",
-    "@composita/interpreter": "^0.1.0-dev.18",
-    "@composita/scheduler": "^0.1.0-dev.4",
-    "@composita/tasks": "^0.1.0-dev.5",
-    "@composita/ts-utility-types": "^0.1.0-dev.7"
+    "@composita/il": "^0.2.0",
+    "@composita/interpreter": "^0.2.0",
+    "@composita/scheduler": "^0.2.0",
+    "@composita/tasks": "^0.2.0",
+    "@composita/ts-utility-types": "^0.2.0"
   },
   "peerDependencies": {
-    "@composita/il": "^0.1.0-dev.15",
-    "@composita/ts-utility-types": "^0.1.0-dev.7"
+    "@composita/il": "^0.2.0",
+    "@composita/ts-utility-types": "^0.2.0"
   }
 }
